Fix z-index on card overflow menu

--- a/public/bundle.css
+++ b/public/bundle.css
@@ -1269,6 +1269,9 @@
   margin-left: 10px;
   position: relative; }
 
+.v-card-content .mdc-menu-anchor > button {
+  z-index: 7; }
+
 @keyframes mdc-ripple-fg-radius-in {
   from {
     animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
